修改配置文件

--- a/agileboot-admin/src/main/resources/application-dev.yml
+++ b/agileboot-admin/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@
 spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
-        driverClassName: com.mysql.cj.jdbc.Driver
+        driverClassName: org.mariadb.jdbc.Driver
         druid:
             webStatFilter:
                 enabled: true
@@ -50,9 +50,9 @@ spring:
             datasource:
                 # 主库数据源
                 master:
-                    url: jdbc:mysql://localhost:33067/agileboot-pure?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+                    url: jdbc:mariadb://192.168.31.14:3306/paiban?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
                     username: root
-                    password: 12345
+                    password: 123456
                 # 从库数据源
 #                slave:
 #                    url: jdbc:mysql://localhost:33067/agileboot2?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
@@ -62,13 +62,13 @@ spring:
     # redis 配置
     redis:
         # 地址
-        host: localhost
+        host: 192.168.31.14
         # 端口，默认为6379
-        port: 36379
+        port: 6400
         # 数据库索引
         database: 0
         # 密码
-        password: 12345
+        password:
         # 连接超时时间
         timeout: 10s
         lettuce:
@@ -84,7 +84,7 @@ spring:
 
 logging:
     file:
-        path: D:/logs/agileboot-dev
+        path: E:/logs/agileboot-dev
 
 
 springdoc:
@@ -98,8 +98,8 @@ springdoc:
 
 # 项目相关配置
 agileboot:
-    # 文件基路径 示例（ Windows配置D:\agileboot，Linux配置 /home/agileboot）
-    file-base-dir: D:\agileboot
+    # 文件基路径 示例（ Windows配置E:\agileboot，Linux配置 /home/agileboot）
+    file-base-dir: E:\agileboot
     # 前端url请求转发前缀
     api-prefix: /dev-api
     demo-enabled: false
