--- a/agileboot-infrastructure/pom.xml
+++ b/agileboot-infrastructure/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+        </dependency>
+
         <!-- springboot测试模块-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
